# ML-CPP

./: CMakeLists.txt  README.md
include/ml/core/: base_model.h  classification.h  regression.h  supervised.h  unsupervised.h
include/ml/models/: linear_regression.h
include/utils/: tree.h
src/core/: base_model.cpp  classification.cpp  regression.cpp  supervised.cpp  unsupervised.cpp
src/models/: linear_regression.cpp
tests/: test_linear_regression.cpp
